# waveshare-epd-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
waveshare_epd/: Cargo.toml
waveshare_epd/examples/: epd5in79.rs
waveshare_epd/src/: epd5in79.rs  lib.rs
waveshare_epd_core/: Cargo.toml  README.md
waveshare_epd_core/src/: error.rs  lib.rs  spi_interface.rs
