[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["AzureQAQ <azureqaq@gmail.com>"]
repository = "https://github.com/azureqaq/waveshare-epd-rs"
homepage = "https://github.com/azureqaq/waveshare-epd-rs"


[workspace]
resolver = "2"
members = ["waveshare_epd", "waveshare_epd_core"]

[workspace.lints.rust]
unsafe_code = "forbid"
# unused = "allow"            # dev


[workspace.dependencies]
thiserror = "1"
embedded-graphics-core = "0.4"
embedded-hal = "1"
