[package]
name = "waveshare_epd_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true


[dependencies]
embedded-graphics-core = { version = "0.4.0", optional = true }
embedded-hal = { version = "1.0.0", optional = true }
embedded-hal-async = { version = "1.0.0", optional = true }

[features]
default = ["embedded_graphics", "std"]

embedded-hal = ["dep:embedded-hal"]
embedded-hal-async = ["dep:embedded-hal-async"]

embedded_graphics = ["dep:embedded-graphics-core"]
nalgebra = ["embedded-graphics-core?/nalgebra_support"]
defmt = [
    "embedded-graphics-core?/defmt",
    "embedded-hal?/defmt-03",
    "embedded-hal-async?/defmt-03",
]

std = []
