[package]
name = "waveshare_epd_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
embedded-hal = { workspace = true }
thiserror = { workspace = true }
